<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Behaviour">

    <TextView
        android:id="@+id/behaviourTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/behaviourTitleTextView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/answerWithFullHonestyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/answerWithFullHonestyTextView"
        android:textAlignment="center"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/beginButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/beginButton"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>